--- a/doc/projektplanung.tex
+++ b/doc/projektplanung.tex
@@ -2,11 +2,11 @@
 
 \subsection{Entwicklungsprozess}
 
-Um das Projekt realisieren zu können, musste sich für einen geeigneten Entwicklungsprozess entschieden werden. Dieser gibt die Vorgehensweise vor, welche der Umsetzung zu Grunde liegt. Für dieses Projekt wurde vom Autor das Wasserfallmodell gewählt. Dabei wird die Umsetzung auf 5 Phasen aufgeteilt (siehe \autoref{fig:wasserfallmodell}): Die Ermittlung der Anforderungen, die Erstellung eines Entwurfs, die Implementierung und am Ende die Überprüfung und Wartung der erstellten Software. Dieses Modell bietet sich für diese Arbeit an, da die Anforderungen an den Editor klar definiert sind und sich während der Umsetzungsphase nicht ändern.
+Um das Projekt realisieren zu können, musste sich für einen geeigneten Entwicklungsprozess entschieden werden. Dieser gibt die Vorgehensweise vor, welche der Umsetzung zu Grunde liegt. Für dieses Projekt wurde vom Autor das Wasserfallmodell gewählt. Dabei wird die Umsetzung auf fünf Phasen aufgeteilt (siehe \autoref{fig:wasserfallmodell}): Ermittlung der Anforderungen,  Erstellung eines Entwurfs, Implementierung, Überprüfung und Wartung der erstellten Software. Dieses Modell bietet sich für diese Arbeit an, da die Anforderungen an den Editor klar definiert sind und sich während der Umsetzungsphase nicht ändern.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[height=78px]{../graphic/diagrams/SD_Wasserfallmodell/Wasserfallmodell}
+	\includegraphics[height=110px]{../graphic/diagrams/SD_Wasserfallmodell/Wasserfallmodell}
 	\caption{Wasserfallmodell}
 	\label{fig:wasserfallmodell}
 \end{figure}
@@ -14,7 +14,7 @@ Um das Projekt realisieren zu können, musste sich für einen geeigneten Entwick
 \subsection{Projektphasen}
 \label{Projektphasen}
 
-Zur Realisierung des Abschlussprojekts standen insgesamt 70 Stunden zur Verfügung. Diese Zeit wurde vor Projektbeginn auf verschiedene Phasen verteilt, die während der Durchführung durchlaufen werden. Diese Zeitplanung der Hauptphasen lässt sich aus \autoref{fig:grobeZeit} entnehmen.
+Zur Realisierung des Abschlussprojekts standen insgesamt 70 Stunden zur Verfügung. Diese Zeit wurde vor Projektbeginn auf verschiedene Phasen verteilt, die während der Durchführung durchlaufen werden. Die Zeitplanung lässt sich aus \autoref{fig:grobeZeit} entnehmen.
 
 \begin{figure}[H] 
 	\begin{center}
