--- a/doc/CODE/Test_ShortcutEditor-EnterShortcut.tex
+++ b/doc/CODE/Test_ShortcutEditor-EnterShortcut.tex
@@ -2,7 +2,7 @@
     \centering
 	\vspace{-12px}
 	\begin{spacing}{0.75}
-		\begin{javacode}[firstnumber=28]
+		\begin{javacode}[firstnumber=41]
 @Test
 public void test_EnterShortcut()
 {
@@ -19,6 +19,6 @@ public void test_EnterShortcut()
   }
 }\end{javacode}
 	\end{spacing}
-	\caption{Setup-Methode}
+	\caption{Test-Methode}
 	\label{fig:Test-ShortcutEditor-EnterShortcut}
 \end{wrapfigure}
