--- a/doc/entwurfsphase.tex
+++ b/doc/entwurfsphase.tex
@@ -74,7 +74,7 @@ Für das Design des User Interfaces (UI) wurden von einem UX-Designer der ADITO 
 
 \newpage
 
-\subsection{Datenmodell für Entitäten und Aktion}
+\subsection{Datenmodell für Entitäten und Aktionen}
 \label{DatenmodellFunc}
 
 \begin{wrapfigure}[17]{r}[0cm]{200px}
