--- a/doc/CODE/ShortcutField-update.tex
+++ b/doc/CODE/ShortcutField-update.tex
@@ -10,8 +10,8 @@ private void _update()
   viewerContainer.setVisible(!empty);
   textContainer.setVisible(empty);
   
-  closeButton.setVisible(isEditable());
-  closeButton.setEnabled(!empty);
+  crossButton.setVisible(isEditable());
+  crossButton.setEnabled(!empty);
 }		\end{javacode}
 	\end{spacing}
 	\caption{Ein- und Ausblenden der Komponenten}
