--- a/doc/projektplanung.tex
+++ b/doc/projektplanung.tex
@@ -2,7 +2,7 @@
 
 \subsection{Entwicklungsprozess}
 
-Um das Projekt realisieren zu können, musste sich für einen geeigneten Entwicklungsprozess entschieden werden. Dieser gibt die Vorgehensweise vor, welche der Umsetzung zu Grunde liegt. Für dieses Projekt wurde vom Autor das Wasserfallmodell gewählt. Dabei wird die Umsetzung auf fünf Phasen aufgeteilt (siehe \autoref{fig:wasserfallmodell}): Ermittlung der Anforderungen,  Erstellung eines Entwurfs, Implementierung, Überprüfung und Wartung der erstellten Software. Dieses Modell bietet sich für diese Arbeit an, da die Anforderungen an den Editor klar definiert sind und sich während der Umsetzungsphase nicht ändern.
+Um das Projekt realisieren zu können, musste sich für einen geeigneten Entwicklungsprozess entschieden werden. Dieser gibt die Vorgehensweise vor, welche der Umsetzung zugrunde liegt. Für dieses Projekt wurde vom Autor das Wasserfallmodell gewählt. Dabei wird die Umsetzung auf fünf Phasen aufgeteilt (siehe \autoref{fig:wasserfallmodell}): Ermittlung der Anforderungen,  Erstellung eines Entwurfs, Implementierung, Überprüfung und Wartung der erstellten Software. Dieses Modell bietet sich für diese Arbeit an, da die Anforderungen an den Editor klar definiert sind und sich während der Umsetzungsphase nicht ändern.
 
 \begin{figure}[H]
 	\centering
@@ -39,7 +39,7 @@ Zur Realisierung des Abschlussprojekts standen insgesamt 70 Stunden zur Verfügu
 
 \subsection{Ressourcenplanung}
 
-Im Zuge der Ressourcenplanung wurde eine Übersicht (siehe Anhang \ref{ressources}) erstellt. Diese enthält sämtliche Ressourcen, welche innerhalb der Durchführung des Projekts eingesetzt wurden. Dabei handelt es sich sowohl um Hard- und Softwareressourcen als auch um Personal. Zur Minimierung der Projektkosten wurde bevorzugt kostenfreie Software verwendet. War dies nicht möglich, so wurde Software eingesetzt, für welche die ADITO Software GmbH bereits Lizenzen besaß.
+Im Zuge der Ressourcenplanung wurde eine Übersicht (siehe Anhang \ref{ressources}) erstellt. Diese enthält sämtliche Ressourcen, welche innerhalb der Durchführung des Projekts benötigt werden. Dabei handelt es sich sowohl um Hard- und Softwareressourcen als auch um Personal. Zur Minimierung der Projektkosten wurde bevorzugt kostenfreie Software verwendet. War dies nicht möglich, so wurde Software eingesetzt, für welche die ADITO Software GmbH bereits Lizenzen besaß.
 
 
 
