--- a/doc/entwurfsphase.tex
+++ b/doc/entwurfsphase.tex
@@ -17,7 +17,7 @@ Bei MVP lässt sich jede Komponente der Software einem der drei Bestandteile - M
 
 \vfill
 
-Im Sinne der Wiederverwendbarkeit, werden alle GUI-Komponenten des Shortcut Editors völlig seperat voneinander und unabhängig vom Editor implementiert. Dadurch kann gewährleistet werden, keine unnötigen Abhängigkeiten zu editorspezifischen Teilen aufzubauen. So ist die Benutzung von Komponenten auch an anderen Stellen in der Software ohne weiteren Aufwand möglich.
+Im Sinne der Wiederverwendbarkeit werden alle GUI-Komponenten des Shortcut Editors völlig separat voneinander und unabhängig vom Editor implementiert. Dadurch kann gewährleistet werden, keine unnötigen Abhängigkeiten zu editorspezifischen Teilen aufzubauen. So ist die Benutzung von Komponenten auch an anderen Stellen in der Software ohne weiteren Aufwand möglich.
 
 \vfill
 
@@ -30,17 +30,17 @@ Wie im Abschnitt \ref{schnittstellen} bereits erwähnt, kommt zum Lesen der Test
 
 Für das Design des User Interfaces (UI) wurden von einem UX-Spezialisten der ADITO Software GmbH Entwürfe angefertigt (siehe \autoref{fig:uxDesigns}). Im Designentwurf wird unter anderem ersichtlich, welche Komponenten verwendet werden müssen, um alle angeforderten Informationen darzustellen. Nachfolgend werden die Bestandteile des Editors näher erläutert:
 
-\ding{192} \textbf{Breadcrumb:} Diese Komponente ist in der Lage einen Pfad darzustellen und diesen zu bearbeiten. In diesem Fall besteht sie aus beliebig vielen Comboboxen, um an jeder Stelle des Pfads einen anderen Knoten auswählen zu können. Diese Komponente dient zum Einen als Orientierungshilfe, um jederzeit feststellen zu können, für welche Aktion der Shortcut gesetzt wird. Zum Anderen ist damit eine intuitive Navigation durch alle Aktionen möglich.
+\ding{192} \textbf{Breadcrumb:} Diese Komponente ermöglicht die Bearbeitung und Darstellung eines Pfads. In diesem Entwurf besteht sie aus beliebig vielen Comboboxen, welche die Wahl eines Knotens ermöglichen. Diese Komponente dient zum einen als Orientierungshilfe, um jederzeit feststellen zu können, für welche Aktion der Shortcut gesetzt wird. Zum anderen ist damit eine intuitive Navigation durch alle Aktionen möglich.
 
-\ding{193} \textbf{Shortcut-Field:} Hierbei handelt es sich um eine Komponente, welche die Darstellung und Bearbeitung von Shortcuts ermöglicht. Die Eingabe und Editierung des Tastaturkürzels kann nur bei fokusiertem Zustand erfolgen. Demnach wechselt die Komponente bei Fokusierung in den Bearbeitungsmodus und verlässt diesen, sobald eine andere Komponente den Fokus erlangt.
+\ding{193} \textbf{Shortcut-Field:} Hierbei handelt es sich um eine Komponente, welche die Darstellung und Bearbeitung von Shortcuts ermöglicht. Die Eingabe und Editierung des Tastaturkürzels kann nur bei fokussiertem Zustand erfolgen. Demnach wechselt die Komponente bei Fokussierung in den Bearbeitungsmodus und verlässt diesen, sobald eine andere Komponente den Fokus erlangt.
 
-\ding{194} \textbf{Check-Button:} Dieses GUI-Element kann selektiert werden und stellt neben einem Icon ein Häckchen- oder Kreuzsymbol dar. Somit kann die Komponente visualisieren, bei welchem Browser bzw. Betriebssystem der Shortcut Probleme bereiten kann (Kreuz) und wo dieser unbedenklich ist (Häckchen). Außerdem dient sie dem Benutzer des Editors zur Auswahl eines Elements, um davon mehr Informationen zu erhalten (In der rechten Abbildung des Entwurfs wurden beispielsweise Google Chrome und anschließend macOS selektiert).
+\ding{194} \textbf{Check-Button:} Dieses GUI-Element kann selektiert werden und stellt neben einem Icon ein Häkchen- oder Kreuzsymbol dar. Somit kann die Komponente visualisieren, bei welchem Browser bzw. Betriebssystem der Shortcut Probleme bereiten kann (Kreuz) und wo dieser unbedenklich ist (Häkchen). Außerdem dient sie dem Benutzer des Editors zur Auswahl eines Elements, um davon mehr Informationen zu erhalten (In der rechten Abbildung des Entwurfs wurden beispielsweise Google Chrome und anschließend macOS selektiert).
 
 \ding{195} \textbf{Shortcut-Tag:} Ein Shortcut-Tag dient zur Darstellung einer Tastenkombination und bietet die Möglichkeit sich mittels eines Kreuz-Buttons selber zu entfernen.
 
-\ding{196} \textbf{TreeTable:} Zur Darstellung der zugrundeliegenden Baumstruktur wird zur Visualisierung aller Aktionen eine Kombination aus Baum und Tabelle verwendet. Sie dient -- wie die \emph{Breadcrumb} -- der Navigation und bietet zudem einen Überblick über alle vorhandenen Shortcuts.
+\ding{196} \textbf{TreeTable:} Zur Darstellung der zugrunde liegenden Baumstruktur wird zur Visualisierung aller Aktionen eine Kombination aus Baum und Tabelle verwendet. Sie dient -- wie die Breadcrumb -- der Navigation und bietet zudem einen Überblick über alle vorhandenen Shortcuts.
 
-\ding{197} \textbf{Accordion:} Ist ein \emph{Check-Button} selektiert, so wird eine Accordion-Komponente angezeigt, welche detailierte Informationen zu den Testergebnissen bietet. Um nur relevante Daten anzuzeigen, besteht die Möglichkeit einige Sektionen durch Klicken auf den Header einzuklappen.
+\ding{197} \textbf{Accordion:} Ist ein \emph{Check-Button} selektiert, so wird eine Accordion-Komponente angezeigt, welche detaillierte Informationen zu den Testergebnissen bietet. Um nur relevante Daten anzuzeigen, besteht die Möglichkeit einige Sektionen durch Klicken auf den Header einzuklappen.
 
 \vfill
 
@@ -89,11 +89,11 @@ Für das Design des User Interfaces (UI) wurden von einem UX-Spezialisten der AD
 
 Wie sich im Designentwurf (\autoref{fig:uxDesigns}) -- aufgrund der TreeTable -- schon erahnen lässt, sollen die Entitäten und deren Aktionen als Baumstruktur aufgebaut werden. Jede Aktion stellt einen Endknoten (Blatt) dar und soll genau einen Shortcut besitzen können. Entitäten hingegen ist es nur erlaubt, Aktionen und weitere Entitäten aufzunehmen (siehe \autoref{fig:baumstruktur_Func}).
 
-Um diese Struktur im Editor abbilden zu können, wurde ein Datenmodell entworfen, welches den Anforderungen entspricht. Zur Erläuterung des Models ist im Folgenden ein schematisches UML Klassendiagramm abgebildet, welches den Grundaufbau und die Beziehungen zwischen den Elementen verdeutlicht (\autoref{fig:baumstrukturUML_Func}).
+Um diese Struktur im Editor abbilden zu können, wurde ein Datenmodell entworfen, welches den Anforderungen entspricht. Zur Erläuterung des Models ist im Folgenden ein schematisches UML-Klassendiagramm abgebildet, welches den Grundaufbau und die Beziehungen zwischen den Elementen verdeutlicht (\autoref{fig:baumstrukturUML_Func}).
 
 \vfill
 
-Zentraler Bestandteil des Datenmodells ist das Interface \emph{IEditorShortcutNode}. Dieses kann neben einem eigenen Namen auch seine Kinder zurückgeben. Diese sind ebenfalls vom Typ \emph{IEditorShortcutNode}. Damit kann grundsätzlich schon eine Baumstrukturen aufgebaut werden. Allerdings ist durch \emph{IEditorShortcutNode} nur die Abbildung der Bestandteile \emph{ROOT} und \emph{Entity} aus \autoref{fig:baumstruktur_Func} möglich, da noch kein Tastenkürzel gespeichert werden kann.
+Zentraler Bestandteil des Datenmodells ist das Interface \emph{IEditorShortcutNode}. Dieses kann neben einem eigenen Namen auch seine Kinder zurückgeben. Diese sind ebenfalls vom Typ \emph{IEditorShortcutNode}. Damit kann grundsätzlich schon eine Baumstruktur aufgebaut werden. Allerdings ist durch \emph{IEditorShortcutNode} nur die Abbildung der Bestandteile \emph{ROOT} und \emph{Entity} aus \autoref{fig:baumstruktur_Func} möglich, da noch kein Tastenkürzel gespeichert werden kann.
 
 \vfill
 
@@ -107,7 +107,7 @@ Zentraler Bestandteil des Datenmodells ist das Interface \emph{IEditorShortcutNo
 
 \vfill
 
-Um auch eine Aktion im Modell abbilden zu können, existiert das Interface \emph{IEditorShortcutModel}. Dieses erbt von \emph{IEditorShortcutNode} und stellt somit einen vollwertigen Knoten dar, welcher bei der Methode \emph{getChildren()} zurückgegeben werden kann. Über die Methoden \emph{setShortcut(...)} kann eine Tastenkombination gesetzt und über \emph{getShortcut()} ausgelesen werden. Da diese Methoden nur die Zuweisung von einem einzigen Shortcut zulassen, ist sichergestellt, dass eine Aktion nur ein Tastenkürzel besitzen kann. Aufgrund der Tatsache, dass \emph{IEditorShortcutModel} einen Endknoten (Blatt) darstellt und somit keine Kinder hat, liefert die geerbte Methode \emph{getChildren()} ein leeres Array. Für die Iteration durch den Baum ist es programmatisch konfortabler und effizienter, wenn jeder Knoten die Methode \emph{getChildren()} besitzt, da andernfalls unnötige Abfragen stattfinden müssen.
+Um auch eine Aktion im Modell abbilden zu können, existiert das Interface \emph{IEditorShortcutModel}. Dieses erbt von \emph{IEditorShortcutNode} und stellt somit einen vollwertigen Knoten dar, welcher bei der Methode \emph{getChildren()} zurückgegeben werden kann. Über die Methoden \emph{setShortcut(...)} kann eine Tastenkombination gesetzt und über \emph{getShortcut()} ausgelesen werden. Da diese Methoden nur die Zuweisung von einem einzigen Shortcut zulassen, ist sichergestellt, dass eine Aktion nur ein Tastenkürzel besitzen kann. Aufgrund der Tatsache, dass \emph{IEditorShortcutModel} einen Endknoten (Blatt) darstellt und somit keine Kinder hat, liefert die geerbte Methode \emph{getChildren()} ein leeres Array. Für die Iteration durch den Baum ist es programmatisch komfortabler und effizienter, wenn jeder Knoten die Methode \emph{getChildren()} besitzt, da andernfalls unnötige Abfragen stattfinden müssen.
 
 Über diese Konstellation lässt sich die Baumstruktur der Aktionen und deren Shortcuts den Anforderungen entsprechend abbilden.
 
@@ -138,7 +138,7 @@ In diesem Modell stellt ein \emph{ICheckItem} ein einzelnes Testergbnis dar. Ein
 
 \subsection{Datenstore}
 
-Damit sowohl die Daten der Entitäten und Aktionen als auch die der Browsertestergebnissen in zuvor geschilderter Form erhalten werden können, soll ein Datenstore zum Einsatz kommen. Dieser liefert die beiden oben beschriebenen Datenmodelle. Dabei kümmert er sich die Daten von anderen Quellen (z.B. XML-Dateien) in die gewünschte Datenmodell-Form zu bringen. Zudem ist er dafür zuständig, die geänderten Daten wieder zurück zu speichern.
+Damit sowohl die Daten der Entitäten und Aktionen als auch die der Browsertestergebnissen in zuvor geschilderter Form erhalten werden können, soll ein Datenstore zum Einsatz kommen. Dieser liefert die beiden oben beschriebenen Datenmodelle. Dabei kümmert er sich die Daten von anderen Quellen (z. B. XML-Dateien) in die gewünschte Datenmodell-Form zu bringen. Zudem ist er dafür zuständig, die geänderten Daten wieder zurück zu speichern.
 
 Um auch ohne die Integration des ShortcutEditors in den ADTIO Designer testweise Entitäten und deren Aktionen zur Verfügung zu haben, soll ein DummyStore implementiert werden, welcher fiktive Testdaten in die Datenmodelle einfügt.
 
