--- a/doc/einleitung.tex
+++ b/doc/einleitung.tex
@@ -24,7 +24,7 @@ Im Rahmen dieser Arbeit soll eine Möglichkeit geschaffen werden, bei der Vergab
 
 \subsection{Ziel}
 
-Um den Entwicklern unserer xRM-Software die Vergabe von Shortcuts zu erleichtern, soll ein spezieller Shortcut-Editor erstellt werden. Dieser muss die Eingabe und Bearbeitung von Shortcuts ermöglichen und bei der Wahl des passenden Tastenkürzels zuarbeitet.
+Um den Entwicklern unserer xRM-Software die Vergabe von Shortcuts zu erleichtern, soll ein spezieller Shortcut-Editor erstellt werden. Dieser muss die Eingabe und Bearbeitung von Shortcuts ermöglichen und bei der Wahl des passenden Tastenkürzels zuarbeiten.
 
 Warnungen im Editor verdeutlichen, dass der eingegebene Shortcut zu Problemen auf einem bestimmten Browser führen kann. Damit der Entwickler feststellen kann, warum ein Shortcut problematisch ist, sollen weitere Informationen angezeigt werden. Diese können beispielsweise angeben, bei welchem Browser bzw. welcher Version das Tastaturkürzel bereits verwendet wird.
 
