--- a/doc/test_junit.tex
+++ b/doc/test_junit.tex
@@ -1,6 +1,6 @@
 \section{Testphase}
 
-Um sicherzustellen, dass alle implementierten Komponenten anforderungsgerecht funktionieren, wurde der Editor anhand manueller Akzeptanztests getestet. Dabei wurde darauf geachtet, auf jede mögliche Bedienweise einzugehen. So wurde der Editor sowohl per Maus als auch per Tastatur bedient. Gleichzeitig wurde stets überprüft, ob sich der Editor wie gewünscht verhält. Konnte man dabei Unstimmigkeiten feststellen, so wurden die jeweiligen Fehler im Sourcecode behoben und erneut getestet.
+Um sicherzustellen, dass alle implementierten Komponenten anforderungsgerecht funktionieren, wurde der Editor anhand manueller Akzeptanztests getestet. Dabei wurde darauf geachtet, auf jede mögliche Bedienung einzugehen. So wurde der Editor sowohl per Maus als auch per Tastatur bedient. Gleichzeitig wurde stets überprüft, ob sich der Editor wie gewünscht verhält. Konnte man dabei Unstimmigkeiten feststellen, so wurden die jeweiligen Fehler im Sourcecode behoben und erneut getestet.
 
 Damit die grundlegende Funktionalität auch dauerhaft gewährleistet werden kann, wurde zudem ein automatisierter Test entwickelt (siehe Anhang \ref{Test_ShortcutEditor}). Dabei wurde das Test-Framework \emph{AssertJ Swing} in Kombination mit \emph{JUnit} verwendet.
 
@@ -10,7 +10,7 @@ Bei \emph{JUnit} handelt es sich ebenfalls um ein quelloffenes Framework, welche
 
 \input{CODE/Test_ShortcutEditor-onSetUp}
 
-In \autoref{fig:Test-ShortcutEditor-onSetUp} ist der Sourcode der Initialisieungsmethode \emph{onSetUp()} dargestellt. Um JUnit anzuweisen, die Methode vor jedem Teststart auszuführen, wurde sie mit der Annotaion \emph{@Before} versehen. 
+In \autoref{fig:Test-ShortcutEditor-onSetUp} ist der Sourcecode der Initialisieungsmethode \emph{onSetUp()} dargestellt. Um JUnit anzuweisen, die Methode vor jedem Teststart auszuführen, wurde sie mit der Annotaion \emph{@Before} versehen. 
 
 \vspace{10px}
 
