--- a/doc/entwurfsphase.tex
+++ b/doc/entwurfsphase.tex
@@ -34,13 +34,13 @@ Für das Design des User Interfaces (UI) wurden von einem UX-Spezialisten der AD
 
 \ding{193} \textbf{Shortcut-Field:} Hierbei handelt es sich um eine Komponente, welche die Darstellung und Bearbeitung von Shortcuts ermöglicht. Die Eingabe und Editierung des Tastaturkürzels kann nur bei fokussiertem Zustand erfolgen. Demnach wechselt die Komponente bei Fokussierung in den Bearbeitungsmodus und verlässt diesen, sobald eine andere Komponente den Fokus erlangt.
 
-\ding{194} \textbf{Check-Button:} Dieses GUI-Element kann selektiert werden und stellt neben einem Icon ein Häkchen- oder Kreuzsymbol dar. Somit kann die Komponente visualisieren, bei welchem Browser bzw. Betriebssystem der Shortcut Probleme bereiten kann (Kreuz) und wo dieser unbedenklich ist (Häkchen). Außerdem dient sie dem Benutzer des Editors zur Auswahl eines Elements, um davon mehr Informationen zu erhalten (In der rechten Abbildung des Entwurfs wurden beispielsweise Google Chrome und anschließend macOS selektiert).
+\ding{194} \textbf{Check-Button:} Dieses GUI-Element kann selektiert werden und stellt neben einem Icon ein Häkchen- oder Kreuzsymbol dar. Somit kann die Komponente visualisieren, bei welchem Browser bzw. Betriebssystem der Shortcut Probleme bereiten kann (Kreuz) und wo dieser unbedenklich ist (Häkchen). Außerdem dient sie dem Benutzer des Editors zur Auswahl eines Elements, um davon mehr Informationen zu erhalten (in der rechten Abbildung des Entwurfs wurden beispielsweise Google Chrome und anschließend macOS selektiert).
 
 \ding{195} \textbf{Shortcut-Tag:} Ein Shortcut-Tag dient zur Darstellung einer Tastenkombination und bietet die Möglichkeit sich mittels eines Kreuz-Buttons selber zu entfernen.
 
 \ding{196} \textbf{TreeTable:} Zur Darstellung der zugrunde liegenden Baumstruktur wird zur Visualisierung aller Aktionen eine Kombination aus Baum und Tabelle verwendet. Sie dient -- wie die Breadcrumb -- der Navigation und bietet zudem einen Überblick über alle vorhandenen Shortcuts.
 
-\ding{197} \textbf{Accordion:} Ist ein \emph{Check-Button} selektiert, so wird eine Accordion-Komponente angezeigt, welche detaillierte Informationen zu den Testergebnissen bietet. Um nur relevante Daten anzuzeigen, besteht die Möglichkeit einige Sektionen durch Klicken auf den Header einzuklappen.
+\ding{197} \textbf{Accordion:} Ist ein Check-Button selektiert, so wird eine Accordion-Komponente angezeigt, welche detaillierte Informationen zu den Testergebnissen bietet. Um nur relevante Daten anzuzeigen, besteht die Möglichkeit einige Sektionen durch Klicken auf den Header einzuklappen.
 
 \vfill
 
@@ -136,9 +136,9 @@ In diesem Modell stellt ein \emph{ICheckItem} ein einzelnes Testergbnis dar. Ein
 
 \vspace{-5px}
 
-\subsection{Datenstore}
+\subsection{DataStore}
 
-Damit sowohl die Daten der Entitäten und Aktionen als auch die der Browsertestergebnissen in zuvor geschilderter Form erhalten werden können, soll ein Datenstore zum Einsatz kommen. Dieser liefert die beiden oben beschriebenen Datenmodelle. Dabei kümmert er sich die Daten von anderen Quellen (z. B. XML-Dateien) in die gewünschte Datenmodell-Form zu bringen. Zudem ist er dafür zuständig, die geänderten Daten wieder zurück zu speichern.
+Damit sowohl die Daten der Entitäten und Aktionen als auch die der Browsertestergebnisse in zuvor geschilderter Form erhalten werden können, soll ein DataStore zum Einsatz kommen. Dieser liefert die beiden oben beschriebenen Datenmodelle. Dabei kümmert er sich die Daten von anderen Quellen (z. B. XML-Dateien) in die gewünschte Datenmodell-Form zu bringen. Zudem ist er dafür zuständig, die geänderten Daten wieder zurück zu speichern.
 
 Um auch ohne die Integration des ShortcutEditors in den ADTIO Designer testweise Entitäten und deren Aktionen zur Verfügung zu haben, soll ein DummyStore implementiert werden, welcher fiktive Testdaten in die Datenmodelle einfügt.
 
@@ -147,7 +147,7 @@ Um auch ohne die Integration des ShortcutEditors in den ADTIO Designer testweise
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=70px]{../graphic/diagrams/CD_IShortcutEditorStore/IShortcutEditorStore}
-	\caption{Datenstore}
+	\caption{DataStore}
 	\label{fig:ishortcuteditorstore}
 \end{figure}
 
